# Initialize-multi-system-monorepo-with-architecture-planning

./: .clippy.toml  .gitignore  Cargo.toml  DELIVERY_SUMMARY.md  FUTURE_PROOFING.md  ONBOARDING.md  PACKAGING_GUIDE.md  PERFORMANCE_BENCHMARKS.md  PHASE_2_PROGRESS.md  README.md  RELEASE_NOTES.md  ROOT_ARCHITECTURE.md  SECURITY_MODEL.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
chaos_engine/: Cargo.toml
chaos_engine/docs/: ARCHITECTURE.md  SPEC.md
chaos_engine/src/: lib.rs  observers.rs  reporters.rs  strategies.rs
chaos_engine/tests/integration/: basic_workflow.rs
contract_executable_compiler/: Cargo.toml
contract_executable_compiler/docs/: SPEC.md
contract_executable_compiler/src/: compiler.rs  lib.rs  parser.rs  runtime.rs
cross_domain_auto_learner/: Cargo.toml
cross_domain_auto_learner/src/: inference.rs  lib.rs  training.rs
cross_domain_autoblocker_ledger/: Cargo.toml
cross_domain_autoblocker_ledger/src/: blocking.rs  consensus.rs  ledger.rs  lib.rs
dynamic_semantic_lattice_engine/: Cargo.toml
dynamic_semantic_lattice_engine/src/: lattice.rs  lib.rs  query.rs  reasoning.rs
linux_scalable_cloud_kernel/userspace/: Cargo.toml
linux_scalable_cloud_kernel/userspace/src/: api.rs  lib.rs  monitoring.rs  orchestration.rs
parallel_architecture_framework/: Cargo.toml
parallel_architecture_framework/src/: communication.rs  executor.rs  lib.rs  scheduler.rs
scripts/: build_all.sh  lint.sh  test_all.sh
shared_core/: Cargo.toml
shared_core/src/: config.rs  crypto.rs  error.rs  lib.rs  logging.rs  plugin.rs  resource_governor.rs  telemetry.rs  types.rs
shared_core/tests/: error_tests.rs  hardening_tests.rs
specs/: ALL_SYSTEMS_SPECIFICATIONS.md
symbolic_reduction_modeler/: Cargo.toml
symbolic_reduction_modeler/src/: api.rs  lib.rs  optimization.rs  reduction.rs  symbolic.rs
synthetic_pipeline_engine/: Cargo.toml
synthetic_pipeline_engine/src/: generators.rs  lib.rs  pipeline.rs  transformers.rs
universal_attestation_authority/: Cargo.toml
universal_attestation_authority/docs/: SPEC.md
universal_attestation_authority/src/: attestation.rs  core.rs  lib.rs  verification.rs
universal_attestation_authority/tests/integration/: attestation_lifecycle.rs
