[package]
name = "chaos_engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Fault injection and resilience testing framework"

[dependencies]
shared_core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Network manipulation
nix = { version = "0.27", features = ["signal", "process"] }

# HTTP client for health probes
reqwest = { workspace = true }
hyper = { workspace = true }

# Prometheus client
metrics = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[features]
default = ["kubernetes", "docker"]
kubernetes = []
docker = []
full = ["kubernetes", "docker"]
