[package]
name = "contract_executable_compiler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DSL compiler for executable contracts"

[dependencies]
shared_core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Parser
nom = "7.1"
pest = "2.7"
pest_derive = "2.7"

# Code generation
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"

# WASM compilation
wasm-encoder = "0.38"
wasmparser = "0.118"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["wasm-backend"]
wasm-backend = []
