[package]
name = "cross_domain_autoblocker_ledger"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed ledger for cross-domain security event blocking"

[dependencies]
shared_core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }

# Consensus
# Note: Add Raft implementation when ready

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = []
