[package]
name = "parallel_architecture_framework"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Framework for distributed computation orchestration"

[dependencies]
shared_core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }

# Parallel execution
rayon = "1.8"
crossbeam = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = []
