[package]
name = "shared_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and telemetry
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Cryptography
ring = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
sha3 = { workspace = true }
aes-gcm = { workspace = true }
zeroize = { workspace = true }

# Configuration
config = { workspace = true }
clap = { workspace = true }

# Validation
validator = { workspace = true }

# Time
chrono = { workspace = true }
humantime = { workspace = true }

# Data structures
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Random
rand = { workspace = true }
rand_core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std", "logging", "crypto"]
std = []
logging = ["tracing", "tracing-subscriber"]
telemetry = ["opentelemetry", "opentelemetry-otlp", "metrics"]
crypto = ["ring", "ed25519-dalek", "blake3", "sha3", "aes-gcm"]
full = ["logging", "telemetry", "crypto"]
