[package]
name = "symbolic_reduction_modeler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Symbolic computation and algebraic reduction engine"

[dependencies]
shared_core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Numeric
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = []
