[package]
name = "synthetic_pipeline_engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Data pipeline orchestration with synthetic data generation"

[dependencies]
shared_core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Data generation
rand = { workspace = true }
fake = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = []
